--- a/gynjo.vcxproj
+++ b/gynjo.vcxproj
@@ -130,13 +130,18 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="src\interpreter.cpp" />
+    <ClCompile Include="src\lexer.cpp" />
     <ClCompile Include="src\main.cpp" />
+    <ClCompile Include="src\parser.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\ast.hpp" />
     <ClInclude Include="src\interpreter.hpp" />
     <ClInclude Include="src\lexer.hpp" />
     <ClInclude Include="src\logger.hpp" />
     <ClInclude Include="src\parser.hpp" />
+    <ClInclude Include="src\tokens.hpp" />
     <ClInclude Include="src\visitation.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
