--- a/gynjo.vcxproj.filters
+++ b/gynjo.vcxproj.filters
@@ -53,5 +53,8 @@
     <ClInclude Include="src\ast.hpp">
       <Filter>src</Filter>
     </ClInclude>
+    <ClInclude Include="src\values.hpp">
+      <Filter>src</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
