--- a/gynjo.vcxproj
+++ b/gynjo.vcxproj
@@ -141,12 +141,14 @@
     <ClCompile Include="src\lexer.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\parser.cpp" />
+    <ClCompile Include="src\values.cpp" />
     <ClCompile Include="test\interpreter.cpp" />
     <ClCompile Include="test\lexer.cpp" />
     <ClCompile Include="test\parser.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\ast.hpp" />
+    <ClInclude Include="src\environment.hpp" />
     <ClInclude Include="src\interpreter.hpp" />
     <ClInclude Include="src\lexer.hpp" />
     <ClInclude Include="src\parser.hpp" />
