--- a/gynjo.vcxproj.filters
+++ b/gynjo.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="src\values.cpp">
       <Filter>src</Filter>
     </ClCompile>
+    <ClCompile Include="src\ast.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\visitation.hpp">
