--- a/gynjo.vcxproj
+++ b/gynjo.vcxproj
@@ -140,7 +140,9 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="src\ast.cpp" />
+    <ClCompile Include="src\environment.cpp" />
     <ClCompile Include="src\interpreter.cpp" />
+    <ClCompile Include="src\intrinsics.cpp" />
     <ClCompile Include="src\lexer.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\parser.cpp" />
@@ -152,7 +154,9 @@
   <ItemGroup>
     <ClInclude Include="src\ast.hpp" />
     <ClInclude Include="src\environment.hpp" />
+    <ClInclude Include="src\environment_fwd.hpp" />
     <ClInclude Include="src\interpreter.hpp" />
+    <ClInclude Include="src\intrinsics.hpp" />
     <ClInclude Include="src\lexer.hpp" />
     <ClInclude Include="src\parser.hpp" />
     <ClInclude Include="src\tokens.hpp" />
