--- a/gynjo.vcxproj.filters
+++ b/gynjo.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClCompile Include="src\environment.cpp">
       <Filter>src</Filter>
     </ClCompile>
+    <ClCompile Include="test\core.cpp">
+      <Filter>test</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\visitation.hpp">
