--- a/gynjo.vcxproj
+++ b/gynjo.vcxproj
@@ -141,26 +141,30 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="src\ast.cpp" />
     <ClCompile Include="src\environment.cpp" />
+    <ClCompile Include="src\expr.cpp" />
     <ClCompile Include="src\interpreter.cpp" />
     <ClCompile Include="src\intrinsics.cpp" />
     <ClCompile Include="src\lexer.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\parser.cpp" />
+    <ClCompile Include="src\stmt.cpp" />
     <ClCompile Include="src\values.cpp" />
     <ClCompile Include="test\core.cpp" />
     <ClCompile Include="test\interpreter.cpp" />
     <ClCompile Include="test\lexer.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="src\ast.hpp" />
     <ClInclude Include="src\environment.hpp" />
     <ClInclude Include="src\environment_fwd.hpp" />
+    <ClInclude Include="src\expr.hpp" />
+    <ClInclude Include="src\expr_fwd.hpp" />
     <ClInclude Include="src\interpreter.hpp" />
     <ClInclude Include="src\intrinsics.hpp" />
     <ClInclude Include="src\lexer.hpp" />
     <ClInclude Include="src\parser.hpp" />
+    <ClInclude Include="src\stmt.hpp" />
+    <ClInclude Include="src\stmt_fwd.hpp" />
     <ClInclude Include="src\tokens.hpp" />
     <ClInclude Include="src\values.hpp" />
     <ClInclude Include="src\visitation.hpp" />
