--- a/gynjo.vcxproj.filters
+++ b/gynjo.vcxproj.filters
@@ -33,9 +33,6 @@
     <ClCompile Include="src\values.cpp">
       <Filter>src</Filter>
     </ClCompile>
-    <ClCompile Include="src\ast.cpp">
-      <Filter>src</Filter>
-    </ClCompile>
     <ClCompile Include="src\intrinsics.cpp">
       <Filter>src</Filter>
     </ClCompile>
@@ -44,6 +41,12 @@
     </ClCompile>
     <ClCompile Include="test\core.cpp">
       <Filter>test</Filter>
+    </ClCompile>
+    <ClCompile Include="src\stmt.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
+    <ClCompile Include="src\expr.cpp">
+      <Filter>src</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -62,9 +65,6 @@
     <ClInclude Include="src\tokens.hpp">
       <Filter>src</Filter>
     </ClInclude>
-    <ClInclude Include="src\ast.hpp">
-      <Filter>src</Filter>
-    </ClInclude>
     <ClInclude Include="src\values.hpp">
       <Filter>src</Filter>
     </ClInclude>
@@ -75,6 +75,18 @@
       <Filter>src</Filter>
     </ClInclude>
     <ClInclude Include="src\environment_fwd.hpp">
+      <Filter>src</Filter>
+    </ClInclude>
+    <ClInclude Include="src\stmt.hpp">
+      <Filter>src</Filter>
+    </ClInclude>
+    <ClInclude Include="src\expr.hpp">
+      <Filter>src</Filter>
+    </ClInclude>
+    <ClInclude Include="src\stmt_fwd.hpp">
+      <Filter>src</Filter>
+    </ClInclude>
+    <ClInclude Include="src\expr_fwd.hpp">
       <Filter>src</Filter>
     </ClInclude>
   </ItemGroup>
